# CD-LAM

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  MANIFEST.md  MODEL_CARD.md  Makefile  NOTICE  README.md  pyproject.toml  ruff.toml  run.sh  setup.sh
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
assets/: README.md
configs/: action_contract.json  eval_paper.yaml  model_runtime.extra.lock.txt  model_runtime.lock.json  paths.example.env  pipeline_100h_14b.yaml  pipeline_100h_2b.yaml  runtime.example.json  stage1_recipe.yaml
docs/: ARTIFACTS.md  CHECKPOINTS.md  DATA.md  EVALUATION.md  EVAL_PROTOCOL.md  MODEL_CARD.md  MODEL_RUNTIME.md  OFFLINE.md  PIPELINE.md  RAW_AGIBOT.md  RAW_EGODEX.md  RAW_SUBSET.md  RELEASE_MANIFEST.md  TRAINING.md  TRAINING_CORRECTNESS.md  USAGE.md
docs/examples/: README.md  conditioning.py
docs/results/: README.md  paper_results.json
examples/: README.md
internal/runtime/: audit_raw_splits.py  build_raw_subset.py  convert_agibot_alpha.py
internal/tools/: stage_acwm_runtime.py
results/: README.md  paper_results.json
scripts/: bootstrap.sh  bootstrap_model_runtime.sh  check_wheel.py  download_datasets.py  download_models.py  fetch_optional_deps.sh  gpu_smoke.py  index_agibot_segments.py  index_egodex.py  materialize_agibot_alpha.py  model_runtime_doctor.py  offline_cache.py  prepare_agibot.py  release_check.py  run.sh  validate_results.py
src/cd_lam/: __init__.py  __main__.py  adapters.py  bridge.py  config.py  evaluation.py  objectives.py  plans.py
src/cd_lam/data/: __init__.py  action.py  manifests.py
src/cd_lam/metrics/: __init__.py  fdce.py
src/cd_lam/training/: __init__.py  bridge_training.py  common.py  runner.py  stage1.py  stage2.py  stage3.py  synthetic.py
src/cdlam_runtime/: __init__.py  __main__.py  action_contract.py  bind_bridge.py  cli.py  config.py  resolve_stage1.py  runtime.py  validate_bridge.py  validate_eval_source.py  validate_stage1.py  validate_stage2_source.py  validate_summary.py
src/cdlam_runtime/entries/: __init__.py  stage1.py  stage1_eval.py  stage2.py  stage3.py
src/cdlam_runtime/support/Scale/: __init__.py
src/cdlam_runtime/support/Scale/common/: __init__.py  shard_io.py
test_data/: README.md  episodes.jsonl
tests/: conftest.py  test_action_data.py  test_adapters.py  test_agibot_raw_converter.py  test_bridge.py  test_cli.py  test_data_manifests.py  test_download_datasets.py  test_download_models.py  test_evaluation.py  test_fdce.py  test_gpu_bootstrap.py  test_index_agibot_segments.py  test_index_egodex.py  test_materialize_agibot_alpha.py  test_model_runtime_setup.py  test_objectives.py  test_offline_cache.py  test_plans.py  test_prepare_agibot.py  test_preprocessing_contract.py  test_raw_data_contract.py  test_raw_subset_ingest.py  test_results_fixture.py  test_runtime_cli.py  test_runtime_recipe.py  test_stage_acwm_runtime.py  test_training_config.py  test_training_smoke.py
tests/fixtures/: README.md
tools/: check_wheel.py  release_check.py  validate_results.py
